- applied patches from Nicolas Vieville to fix compilation warnings with gcc-4.4
- applied patches from Nicolas Vieville to improve internationalisation (mostly on partimaged)
- applied patches from Nicolas Vieville to free ressources in netclient (fixes memory leaks)
- applied patches from Nicolas Vieville to fix issues with openssl-1.0.0

0.6.8 (2009-09-24):
- applied ufs patch from Reyk Floeter the patch fixes UFS mode (tested with OpenBSD FFS1 partitions). 
  the fsbtodb() macro is the standard way to get the CG offset, see dumpfs(8) on the BSD of your choice.
- Applied patch from gentoo: https://bugs.gentoo.org/show_bug.cgi?id=159556
- Applied patch from fedora: partimage-0.6.7-gcc44.patch
- Applied patch from mandriva: partimage-0.6.7-inttypes.patch
- Applied patch from mandriva: partimage-0.6.7-set-effective-gid.patch
- Applied patch from mandriva: partimage-0.6.7-setegid.patch
- Applied patches from mandriva: nologin and nossl
- Added support for devmapper entries found in /proc/partitions
- Applied patch from mandriva: partimage-0.6.7-save_file_and_rest_file_actions.patch

0.6.7 (2008-02-03):
- applied amd64 patch from Andre Przywara
- applied ext2/ext3 patch from the clonezilla team (Thomas Tsai) that fixes a bug when the "blocks per group" in ext2/ext3 is not 32768
- applied dont-discard-error-message-in-batch-mode.patch
- applied gui.diff
- applied thread-privilege-fix.patch
- Michael Biebl (the debian maintainer) cleaned up the build system so that "make distcheck" and "make dist" finally pass

0.6.6 (2007-08-11):
- applied patches from the clonezilla team (Thomas Tsai) to make partimage work better with stdin/stdout in batch mode:
  + more output info when using stdin/stdout in batch mode (-B gui=no).
  + if batch mode is on, volume=0 is automatically set. This will avoid partimage creating an output file "stdout.000", make it really use /dev/stdout
  + if batch mode is on, necessary device node will be created automatically.